--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Welcome to the main page</h1>
+    <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0">pickle rick</a>
 </body>
 </html>
